log
Thu, May 15, 2025  2:34:56 PM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:13: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   60 |             pushback(list, new);
      |             ^~~~~~~~
      |             pushBack
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025  2:35:03 PM: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:13: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   60 |             pushback(list, new);
      |             ^~~~~~~~
      |             pushBack
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
e03220c
Thu, May 15, 2025  2:35:18 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eedf188
Thu, May 15, 2025  2:35:36 PM: 
 tests:  2|4
total_score: 15/70
b002ef0
Thu, May 15, 2025  3:21:12 PM: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  5|3
total_score: 35/70
3d0437e
Thu, May 15, 2025  5:28:38 PM: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|3
total_score: 35/70
423567b
Thu, May 15, 2025  5:31:03 PM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
bdf9afb
Thu, May 15, 2025  5:53:16 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
bd2138c
Thu, May 15, 2025  5:54:51 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
d4df63c
Thu, May 15, 2025  5:55:55 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
2616fb8
Sat, May 17, 2025  1:06:30 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: warning: unused variable 'k' [-Wunused-variable]
   47 |   int i, j, k;
      |             ^
sudoku.c: In function 'DFS':
sudoku.c:114:10: error: implicit declaration of function 'size'; did you mean '_msize'? [-Wimplicit-function-declaration]
  114 |   while (size(S) != 0) {
      |          ^~~~
      |          _msize
sudoku.c:115:15: error: invalid use of void expression
  115 |     Node *n = (Node *) pop(S);
      |               ^
sudoku.c:122:5: error: implicit declaration of function 'free_node' [-Wimplicit-function-declaration]
  122 |     free_node(n);
      |     ^~~~~~~~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
40bac6e
Sat, May 17, 2025  1:14:21 PM: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:114:10: error: implicit declaration of function 'size'; did you mean '_msize'? [-Wimplicit-function-declaration]
  114 |   while (size(S) != 0) {
      |          ^~~~
      |          _msize
sudoku.c:126:5: error: implicit declaration of function 'free_node' [-Wimplicit-function-declaration]
  126 |     free_node(n);
      |     ^~~~~~~~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
0eed358
Sat, May 17, 2025  1:14:43 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:126:5: error: implicit declaration of function 'free_node' [-Wimplicit-function-declaration]
  126 |     free_node(n);
      |     ^~~~~~~~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
62e1df8
Sat, May 17, 2025  1:14:56 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
c416604
Sat, May 17, 2025  1:25:15 PM: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:126:7: error: implicit declaration of function 'ptr' [-Wimplicit-function-declaration]
  126 |       ptr(next(current));
      |       ^~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
6f34b5f
Sat, May 17, 2025  1:25:19 PM: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:126:7: error: implicit declaration of function 'ptr' [-Wimplicit-function-declaration]
  126 |       ptr(next(current));
      |       ^~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
ee293e9
Sat, May 17, 2025  1:25:41 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
766dba8
Sat, May 17, 2025  1:26:05 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4096230
Sat, May 17, 2025  1:27:11 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
838ffae
Sat, May 17, 2025  1:28:29 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
2deb11a
